testcrate/tests/ui/insert.stderr
error: missing fields: `field2`, `related_field`
  --> $DIR/insert.rs:48:16
   |
48 |     sql!(Table.insert(field1 = 42, i32_field = 91));
   |                ^^^^^^

error: attempted access of field `i32_fild` on type `Table`, but no field with that name was found
  --> $DIR/insert.rs:51:36
   |
51 |     sql!(Table.insert(field1 = 42, i32_fild = 91));
   |                                    ^^^^^^^^
   |
   = help: did you mean i32_field?

error: expected = but got +=
  --> $DIR/insert.rs:55:33
   |
55 |     sql!(Table.insert(i32_field += 42, field1 = "Test"));
   |                                 ^^

error: missing fields: `field2`, `related_field`
  --> $DIR/insert.rs:55:16
   |
55 |     sql!(Table.insert(i32_field += 42, field1 = "Test"));
   |                ^^^^^^

error: expected = but got -=
  --> $DIR/insert.rs:59:46
   |
59 |     sql!(Table.insert(i32_field = 42, field1 -= "Test"));
   |                                              ^^

error: missing fields: `field2`, `related_field`
  --> $DIR/insert.rs:59:16
   |
59 |     sql!(Table.insert(i32_field = 42, field1 -= "Test"));
   |                ^^^^^^

error: mismatched types:
 expected `String`,
    found `integral variable`
  --> $DIR/insert.rs:66:32
   |
66 |     sql!(Table.insert(field1 = 42, i32_field = 91, field2 = "test", related_field = related_field));
   |                                ^^
   |
   = note: in this expansion of sql! (defined in tql)

error: mismatched types:
 expected `RelatedTable`,
    found `integral variable`
  --> $DIR/insert.rs:72:89
   |
72 |     sql!(Table.insert(field1 = "test", i32_field = 91, field2 = "test", related_field = 1));
   |                                                                                         ^
   |
   = note: in this expansion of sql! (defined in tql)

error: aborting due to 8 previous errors

